# Computer-Vision

./: .gitignore
Convolutional_Neural_Networks_for_Visual_Recognition/: lecture4.md
Foundations and Applications/hw0_release/: hw0.ipynb  imageManip.py  requirements.txt
Foundations and Applications/hw0_release/.ipynb_checkpoints/: hw0-checkpoint.ipynb
Foundations and Applications/hw1_release/: requirements.txt
Foundations and Applications/hw2_release/: edge.py  hw2.ipynb  hw2.py  requirements.txt
Foundations and Applications/hw3_release/: hw3.py  panorama.py
Foundations and Applications/hw7_release/: detection.py  hw7.ipynb  visualization.py
Foundations and Applications/hw8_release/: hw8.ipynb  motion.py
Foundations_and_Applications/hw0_release/: linalg.py
Foundations_and_Applications/hw1_release/: filters.py
Foundations_and_Applications/hw2_release/: hw2.py
Foundations_and_Applications/hw3_release/: panorama.py  utils.py
Foundations_and_Applications/hw4_release/: hw4.py
Foundations_and_Applications/hw7_release/: hw7.py
Foundations_and_Applications/hw8_release/: motion.py
Opencv_Api_Usage/VideoCapture/: CMakeLists.txt  video_operation.cpp  video_operation.py
Pedestrian_Detection/: .gitignore  CMakeLists.txt  ReadMe.md  ped_predict.sh  ped_train.sh  rm_build.sh
Pedestrian_Detection/src/: CMakeLists.txt
Pedestrian_Detection/src/include/: hog.hpp  log.hpp  ped_eval.hpp  ped_predict.hpp  ped_train.hpp
Pedestrian_Detection/src/source/: hog.cpp  main.cpp  ped_eval.cpp  ped_predict.cpp  ped_train.cpp
Pedestrian_Detection/tools/objects_detection/datasets/: create_INRIAPerson_training_dataset.py
